[gd_scene load_steps=12 format=2]

[ext_resource path="res://font.tres" type="DynamicFont" id=1]
[ext_resource path="res://summary.gd" type="Script" id=2]
[ext_resource path="res://fonts/Daydream.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.745098, 0.333333, 0.0352941, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.482353, 0.219608, 0.0313726, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="DynamicFont" id=2]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 5
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 8
extra_spacing_top = 5
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.607843, 0.415686, 0.27451, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.8, 0.466667, 0.223529, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.482353, 0.219608, 0.0313726, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.482353, 0.219608, 0.0313726, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="SummaryLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="SummaryControl" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Background" type="Panel" parent="SummaryControl"]
margin_right = 320.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 258, 64 )
custom_styles/panel = SubResource( 1 )

[node name="LabelDay" type="Label" parent="SummaryControl"]
margin_left = -1.0
margin_top = 3.0
margin_right = 319.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
text = "END OF THE DAY 1"
align = 1

[node name="HSeparator" type="HSeparator" parent="SummaryControl"]
margin_left = 42.0
margin_top = 24.0
margin_right = 272.0
margin_bottom = 28.0
custom_styles/separator = SubResource( 3 )

[node name="LabelCurrentMoney" type="Label" parent="SummaryControl"]
margin_left = 42.0
margin_top = 32.0
margin_right = 167.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "CURRENT MONEY"

[node name="LabelMoney" type="Label" parent="SummaryControl"]
margin_left = 245.0
margin_top = 32.0
margin_right = 273.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "100 "
align = 2

[node name="LabelFood" type="Label" parent="SummaryControl"]
margin_left = 42.0
margin_top = 48.0
margin_right = 167.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 25, 8 )
custom_fonts/font = ExtResource( 1 )
text = "FOOD"

[node name="LabelFoodMoney" type="Label" parent="SummaryControl"]
margin_left = 245.0
margin_top = 48.0
margin_right = 273.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 64, 16 )
custom_fonts/font = ExtResource( 1 )
text = "-20"
align = 2

[node name="LabelAssortment" type="Label" parent="SummaryControl"]
margin_left = 42.0
margin_top = 64.0
margin_right = 167.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )
text = "Assortment"

[node name="LabelMafia" type="Label" parent="SummaryControl"]
margin_left = 42.0
margin_top = 80.0
margin_right = 167.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 1 )
text = "Mafia"

[node name="LabelMafiaMoney" type="Label" parent="SummaryControl"]
margin_left = 245.0
margin_top = 80.0
margin_right = 273.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 1 )
text = "-70"
align = 2

[node name="LabelAssortmentMoney" type="Label" parent="SummaryControl"]
margin_left = 245.0
margin_top = 64.0
margin_right = 273.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )
text = "-30"
align = 2

[node name="LabelAfterMoney" type="Label" parent="SummaryControl"]
margin_left = 42.0
margin_top = 118.0
margin_right = 167.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 1 )
text = "Money"

[node name="LabelAfterMoneyInt" type="Label" parent="SummaryControl"]
margin_left = 245.0
margin_top = 118.0
margin_right = 273.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 1 )
text = "20"
align = 2

[node name="Button" type="Button" parent="SummaryControl"]
margin_left = 119.0
margin_top = 149.0
margin_right = 208.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "CONTINUE"

[connection signal="pressed" from="SummaryControl/Button" to="." method="_on_Button_pressed"]
